[package]
name = "src"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.3",features = ["full"]}
hex = "0.4"
futures="0.3"
libc = "0.2"
openssl = {version="0.10",features = ["vendored"]}
crc = "3.2.1"
nix = {version="0.26",default-features = false,features=["fs","mman"]}